[gd_scene load_steps=4 format=3 uid="uid://b72gtalx85upg"]

[ext_resource type="Texture2D" uid="uid://e8unvrust18v" path="res://Scream_Jam_2025_Art/Weapons/bullet.png" id="1_83itf"]
[ext_resource type="Script" uid="uid://dh81bqccb8wvi" path="res://scenes/bullet/bullet.gd" id="2_83itf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_83itf"]
radius = 1.6666666
height = 5.1993065

[node name="Bullet" type="Sprite2D" groups=["bullet"]]
texture_filter = 1
texture_repeat = 1
scale = Vector2(0.577, 0.3)
texture = ExtResource("1_83itf")
script = ExtResource("2_83itf")

[node name="Area2D" type="Area2D" parent="." groups=["bullet"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.9802319e-08, 0)
rotation = -1.5707964
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_83itf")

[node name="bullet_queuefree_time" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="bullet_queuefree_time" to="." method="_on_bullet_queuefree_time_timeout"]
